[package]
name = "eva"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl-rs = { package = "gl", version = "0.14.0" }
glutin = "0.31.1"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.2"
skia-safe = { version = "0.69.0", features = ["gl", "textlayout"] }
winit = "0.29.4"
